--- a/css/styles.css
+++ b/css/styles.css
@@ -133,7 +133,7 @@ list-type-ulli, .socials {
   -o-transition: all 300ms ease 0s;
   -ms-transition: all 300ms ease 0s; }
 
-input, textarea {
+.podaci, textarea {
   outline: none;
   appearance: unset !important;
   -moz-appearance: unset !important;
@@ -141,7 +141,7 @@ input, textarea {
   -o-appearance: unset !important;
   -ms-appearance: unset !important; }
 
-input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
+.podaci::-webkit-outer-spin-button, .podaci::-webkit-inner-spin-button {
   appearance: none !important;
   -moz-appearance: none !important;
   -webkit-appearance: none !important;
@@ -149,7 +149,7 @@ input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
   -ms-appearance: none !important;
   margin: 0; }
 
-input:focus, select:focus, textarea:focus {
+.podaci:focus, .podaci:focus, textarea:focus {
   outline: none;
   box-shadow: none !important;
   -moz-box-shadow: none !important;
@@ -157,20 +157,21 @@ input:focus, select:focus, textarea:focus {
   -o-box-shadow: none !important;
   -ms-box-shadow: none !important; }
 
-input[type=checkbox] {
+/*
+.podaci[type=checkbox] {
   appearance: checkbox !important;
   -moz-appearance: checkbox !important;
   -webkit-appearance: checkbox !important;
   -o-appearance: checkbox !important;
   -ms-appearance: checkbox !important; }
 
-input[type=radio] {
+.podaci[type=radio] {
   appearance: radio !important;
   -moz-appearance: radio !important;
   -webkit-appearance: radio !important;
   -o-appearance: radio !important;
   -ms-appearance: radio !important; }
-
+*/
 figure {
   margin: 0; }
 
@@ -189,7 +190,7 @@ p {
 
 .container {
   width: 500px;
-  background: #fff;
+  background-color: rgb(256,256, 256, 0.8);
   margin: 0 auto;
   box-shadow: 0px 15px 16.83px 0.17px rgba(0, 0, 0, 0.05);
   -moz-box-shadow: 0px 15px 16.83px 0.17px rgba(0, 0, 0, 0.05);
@@ -289,46 +290,47 @@ figure {
   .form-group:last-child {
     margin-bottom: 0px; }
 
-input {
+.podaci {
+  background-color: rgb(256,256, 256, 0.1);
   width: 100%;
   display: block;
   border: none;
   font-family: 'Exo 2', sans-serif;
   border-bottom: 1px solid #999;
-  padding: 6px 30px;
+  padding: 6px 40px;
   box-sizing: border-box; }
-  input::-webkit-input-placeholder {
+  .podaci::-webkit-input-placeholder {
     color: #999; }
-  input::-moz-placeholder {
+  .podaci::-moz-placeholder {
     color: #999; }
-  input:-ms-input-placeholder {
+  .podaci:-ms-input-placeholder {
     color: #999; }
-  input:-moz-placeholder {
+  .podaci:-moz-placeholder {
     color: #999; }
-  input:focus {
+  .podaci:focus {
     border-bottom: 1px solid #222; }
-    input:focus::-webkit-input-placeholder {
+    .podaci:focus::-webkit-input-placeholder {
       color: #222; }
-    input:focus::-moz-placeholder {
+    .podaci:focus::-moz-placeholder {
       color: #222; }
-    input:focus:-ms-input-placeholder {
+    .podaci:focus:-ms-input-placeholder {
       color: #222; }
-    input:focus:-moz-placeholder {
+    .podaci:focus:-moz-placeholder {
       color: #222; }
 
-input[type=checkbox]:not(old) {
+.podaci[type=checkbox]:not(old) {
   width: 2em;
   margin: 0;
   padding: 0;
   font-size: 1em;
   display: none; }
 
-input[type=checkbox]:not(old) + label {
+.podaci[type=checkbox]:not(old) + label {
   display: inline-block;
   line-height: 1.5em;
   margin-top: 6px; }
 
-input[type=checkbox]:not(old) + label > span {
+.podaci[type=checkbox]:not(old) + label > span {
   display: inline-block;
   width: 13px;
   height: 13px;
@@ -348,14 +350,14 @@ input[type=checkbox]:not(old) + label > span {
   background-image: linear-gradient(white, white);
   vertical-align: bottom; }
 
-input[type=checkbox]:not(old):checked + label > span {
+.podaci[type=checkbox]:not(old):checked + label > span {
   background-image: -moz-linear-gradient(white, white);
   background-image: -ms-linear-gradient(white, white);
   background-image: -o-linear-gradient(white, white);
   background-image: -webkit-linear-gradient(white, white);
   background-image: linear-gradient(white, white); }
 
-input[type=checkbox]:not(old):checked + label > span:before {
+.podaci[type=checkbox]:not(old):checked + label > span:before {
   content: '\f26b';
   display: block;
   color: #222;
@@ -610,118 +612,69 @@ label.valid {
 
 /*------------------------------------------------------*/
 /* za serch opciju*/
-@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
-
-.aa {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  outline: none;
-  list-style: none;
-  font-family: 'Montserrat', sans-serif;
-}
 
 
-.wrapper{
-  margin-left: 17em;
-  margin-right: 17em;
-  margin-top: 20px;
-  background: #fae7aa;
-  border-radius: 10px;
-}
-
-.search_box{
-  width: 500px;
-  background: #fae7aa;
-  height: 65px;
-  display: flex;
-  padding: 10px;
-  border-radius: 10px;
-  box-shadow: 0 8px 6px -10px #b3c6ff;
-}
-
-.dropdown{
-  width: 150px;
-  border-right: 2px solid #455b82;
-  color: #9fa3b1;
-  position: relative;
-  cursor: pointer;
-}
-
-.default_option{
-  text-transform: uppercase;
-  padding: 13px 15px;
-  font-size: 14px;
-}
-
-.dropdown_ul{
-  position: absolute;
-  top: 70px;
-  left: -10px;
-  background: #fff;
-  width: 150px;
-  border-radius: 5px;
-  padding: 20px;
-  display: none;
-  box-shadow: 8px 8px 6px -10px #b3c6ff;
-}
-
-.dropdown_ul.active{
-  display: block;
-}
-
-.dropdown_ul_li{
-  padding-bottom: 20px;
-}
-
-.c:last-child{
-  padding-bottom: 0;
-}
-
-.dropdown_ul_li:hover{
-  color: #6f768d;
-}
-
-.dropdown:before{
-  content: "";
-  position: absolute;
-  top: 18px;
-  right: 20px;
-  border: 8px solid;
-  border-color: #455b82 transparent transparent transparent;
-}
-
-.search_field{
-  width: 350px;
-  height: 100%;
-  position: relative;
-}
-
-.main_input{
+div.wrap {
   width: 100%;
-  height: 100%;
-  border: 0px;
-  font-size: 16px;
-  padding-left: 20px;
-  padding-right: 38px;
-  color: #6f768d;
-  background: #fae7aa;
+  margin:0px;
+  position: relative;
+  display: inline-block;
 }
 
-.fas{
-  font-size: 22px;
-  color: #5078ef;
-  cursor: pointer;
+div.wrap div {
+  position: relative;
+  margin-left: 20px;
+  margin-right: 20px;
+  width: 40%;
 }
 
-::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-  color: #9fa3b1;
+div.l{
+  float: left;
 }
-::-moz-placeholder { /* Firefox 19+ */
- color: #9fa3b1;
+div.r{
+  float: right;
 }
-:-ms-input-placeholder { /* IE 10+ */
-  color: #9fa3b1;
+
+label {
+  position: absolute;
+  top: 5px;
+  font-size: 1em;
+  margin: 10px;
+  padding: 10px;
+  background-color: #11ffee00;
+  -webkit-transition: top .2s ease-in-out,
+                      font-size .2s ease-in-out;
+  transition: top .2s ease-in-out,
+              font-size .2s ease-in-out;
+  color: white;
+  font-family: Garamond;
+  font-weight: bold;
+}
+
+.active {
+  top: -25px;
+  font-size: 1em;
+}
+
+.cool[type=text] {
+  width: 100%;
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #f5ddb0;
+  font-size: 1em;
+  background-color: #f5ddb0;
+  color: white;
+  font-family: Garamond;
+}
+
+.cool[type=text]:focus {
+  outline: none;
+  border-radius: 5px;
+  background-color: #f5ddb0;
+  font-family: Garamond;
 }
 
 /*-------------------------------------------------------*/
+#ispod{
+  background-color: #11ffee00;
+}
