--- a/css/styles.css
+++ b/css/styles.css
@@ -675,6 +675,43 @@ label {
 }
 
 /*-------------------------------------------------------*/
-#ispod{
-  background-color: #11ffee00;
+.button-submit:disabled,
+.button-submit[disabled]{
+  border-color: #999999;
+  background-color: #dad8d8;
+  color: #666666;
 }
+.button-submit:hover {
+  color: white;
+  box-shadow: 0 0 30px 0 ;
+  background-color: #306a82;
+
+  transition: all 0.2s ease-out;
+}
+.button-submit{
+  color: #306a82;
+  border-color: #306a82;
+  background-color: #11ffee00;
+
+  text-decoration: none;
+  text-transform: uppercase;
+  font-family: 'Exo 2', sans-serif;
+  font-weight: bold;
+  font-size: 10px;
+
+  display: inline-block;
+  position: relative;
+  text-align: center;
+  border: 2px solid;
+  border-radius:5px;
+
+  line-height: 3em;
+  padding-left: 5em;
+  padding-right: 5em;
+
+  transition: all 0.2s ease-in;
+  }
+}
+
+
+
