--- a/css/styles.css
+++ b/css/styles.css
@@ -714,4 +714,288 @@ label {
 }
 
 
+/*------------------------------------*/
+.ispod{
+  width: 100%;
+  margin-top: 70px;
+  margin-left: 20px;
+  display: inline-block;
+}
 
+.slider {
+  pointer-events: none;
+  margin: 0px;
+  cursor: pointer;
+  /*width:200px;*/
+
+  padding-left: 30%;
+  padding-right: 30%;
+  /*height:6px;*/
+
+  background-color: #f5ddb0;
+  box-sizing: border-box;
+}
+
+.slider.focusable {
+  border: 1px solid #222
+}
+
+.thumb {
+  cursor: pointer;
+  border-color: #333;
+  border-style: solid;
+  background-color: rgba(100, 100, 100, 1);
+  border-radius: 50%;
+  position: absolute;
+  /*top:-6px;left:50px;*/
+}
+
+.track {
+  pointer-events: none;
+  height: 100%;
+  background-color: #e3a70e;
+}
+
+.nivo {
+  position: relative;
+  margin: 10px;
+  width: 35%;
+}
+
+.output {
+  pointer-events: none;
+  margin: 0;
+  width: 30px;
+  height: 30px;
+  line-height: 30px;
+  border-radius: 50% 50% 0 50%;
+  background-color: #f5ddb0;
+  text-align: center;
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+  position: absolute;
+  top: -45px;
+  /*left:45px;*/
+
+  ;
+}
+
+.output p {
+  pointer-events: none;
+  font-size: 14px;
+  color: #0a1a17;
+  text-align: center;
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  margin-top:0;
+
+}
+
+.slider2 {
+  pointer-events: none;
+  margin: 0px;
+  cursor: pointer;
+  /*width:200px;*/
+
+  padding-left: 30%;
+  padding-right: 30%;
+  /*height:6px;*/
+
+  background-color: #f5ddb0  ;
+  box-sizing: border-box;
+}
+
+.slider2.focusable {
+  border: 1px solid #222
+}
+
+.thumb2 {
+  cursor: pointer;
+  border-color: #333;
+  border-style: solid;
+  background-color: rgba(100, 100, 100, 1);
+  border-radius: 50%;
+  position: absolute;
+  /*top:-6px;left:50px;*/
+}
+
+.track2 {
+  pointer-events: none;
+  height: 100%;
+  background-color: #e3a70e;
+}
+
+.nivo2 {
+  position: relative;
+  margin: 10px;
+  width: 35%;
+}
+
+.output2 {
+  pointer-events: none;
+  margin: 0;
+  width: 30px;
+  height: 30px;
+  line-height: 30px;
+  border-radius: 50% 50% 0 50%;
+  background-color: #f5ddb0  ;
+  text-align: center;
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+  position: absolute;
+  top: -45px;
+  /*left:45px;*/
+
+  ;
+}
+
+.output2 p {
+  pointer-events: none;
+  font-size: 14px;
+  color: #0a1a17;
+  text-align: center;
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  margin-top:0;s
+}
+
+/*-----------------------------------------------------*/
+/*checkbox*/
+/* The container */
+.checkbox-con {
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  font-size: 15px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+/* Hide the browser's default checkbox */
+.checkbox-con input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+/* Create a custom checkbox */
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 25px;
+  width: 25px;
+  background-color: #eee;
+}
+
+/* On mouse-over, add a grey background color */
+.checkbox-con:hover input ~ .checkmark {
+  background-color: #ccc;
+}
+
+/* When the checkbox is checked, add a blue background */
+.checkbox-con input:checked ~ .checkmark {
+  background-color: #e3a70e;
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the checkmark when checked */
+.checkbox-con input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the checkmark/indicator */
+.checkbox-con .checkmark:after {
+  left: 9px;
+  top: 5px;
+  width: 5px;
+  height: 10px;
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+/* The container */
+.radio-con {
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  font-size: 15px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+/* Hide the browser's default radio button */
+.radio-con input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+}
+
+/* Create a custom radio button */
+.checkmark-radio {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 25px;
+  width: 25px;
+  background-color: #eee;
+  border-radius: 50%;
+}
+
+/* On mouse-over, add a grey background color */
+.radio-con:hover input ~ .checkmark-radio {
+  background-color: #ccc;
+}
+
+/* When the radio button is checked, add background */
+.radio-con input:checked ~ .checkmark-radio {
+  background-color: #e3a70e;
+}
+
+/* Create the indicator (the dot/circle - hidden when not checked) */
+.checkmark-radio:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the indicator (dot/circle) when checked */
+.radio-con input:checked ~ .checkmark-radio:after {
+  display: block;
+}
+
+/* Style the indicator (dot/circle) */
+.radio-con .checkmark-radio:after {
+ 	top: 9px;
+	left: 9px;
+	width: 8px;
+	height: 8px;
+	border-radius: 50%;
+	background: white;
+}
