--- a/boats/css/styles.css
+++ b/boats/css/styles.css
@@ -677,10 +677,11 @@ label {
 
 /*-------------------------------------------------------*/
 .button-submit:disabled,
-.button-submit[disabled]{
+.button-submit[disabled]:hover{
   border-color: #999999;
   background-color: #dad8d8;
   color: #666666;
+  box-shadow: 0 0 0 0 ;
 }
 .button-submit:hover {
   color: white;
